# CWE-114-Test-task

./: CMakeLists.txt
Test task/: LinuxSource.cpp  WinSource.cpp  std_testcase.h
